public/css/z.css
/* ... */
.ot-container.ot-css3.ot-becoming-visible.ot-show-condense,
.ot-container.ot-css3.ot-hidden.ot-hide-puff
{
	transform: scale(5);
	-khtml-transform: scale(5);
	-moz-transform: scale(5);
	-webkit-transform: scale(5);
	opacity: 0;
}

/*
 * other
 */

.login-inner
{
	display: inline-block;
}

.login-inner img
{
	border-radius: 4px;
	box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
	transition-duration: 0.35s;
	transition-property: all, transform;
	-khtml-border-radius: 4px;
	-khtml-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
	-khtml-transition-duration: 0.35s;
	-khtml-transition-property: all, -khtml-transform;
	-moz-border-radius: 5px;
	-moz-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
	-moz-transition-duration: 0.35s;
	-moz-transition-property: all, -moz-transform;
	-webkit-border-radius: 5px;
	-webkit-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
	-webkit-transition-duration: 0.35s;
	-webkit-transition-property: all, -webkit-transform;
}

.login-inner img:hover
{
	transform: scale(1.15);
	-khtml-transform: scale(1.15);
	-moz-transform: scale(1.15);
	-webkit-transform: scale(1.15);
}

.loading
{
	display: inline-block;
	margin: auto;
}

::selection
{
	background: rgba(175,175,175,0.4);
}

::-moz-selection
{
	background: rgba(175,175,175,0.4);
}

::-webkit-scrollbar
{
	width: 10px;
	height: 10px;
}

::-webkit-scrollbar-track-piece
{
	background-color: #F6F6F6;
}

::-webkit-scrollbar-track-piece:horizontal
{
	width: 25px;
}

::-webkit-scrollbar-thumb
{
	background-color: #5F5F5F;
	border-radius: 4px;
}

/*
 * "funny stuff"
 */

/* global body stuff */
body
{
	background: #F6F6F6;
	font: normal 75% "Open Sans", sans-serif;
	font-smoothing: subpixel-antialiased;
	height: 100%;
	line-height: 1.5;
	margin: 0 auto;
	position: relative;
	user-select: none;
	width: width 100%;
	-khtml-font-smoothing: subpixel-antialiased;
	-khtml-user-select: none;
	-moz-font-smoothing: subpixel-antialiased;
	-moz-user-select: none;
	-o-font-smoothing: subpixel-antialiased;
	-o-user-select: none;
	-webkit-font-smoothing: subpixel-antialiased;
	-webkit-user-select: none;
}

/* from here on out we are doing to set stuff specifically by the users viewport width */
@media only screen and (max-width: 480px)
{
	.comment-arrow 	
	{
		display: none;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 165px;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 55px;
	}
	.normal, body
	{
		font: normal 69% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 480px) and (max-width: 590px)
{
	.comment-content-wrapper
	{
		float: right;
		width: 75%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 71% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 590px) and (max-width: 800px)
{
	.comment-content-wrapper
	{
		float: right;
		width: 81%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 73% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 800px) and (max-width: 1024px)
{
	.comment-body, .comment-body-mentioned, .comment-body-me
	{
		margin-right: 25px;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 84%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 74% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 1024px) and (max-width: 1152px)
{
	.comment-body, .comment-body-mentioned, .comment-body-me
	{
		margin-right: 25px;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 86%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 76% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 1152px) and (max-width: 1350px)
{
	.comment-body, .comment-body-mentioned, .comment-body-me
	{
		margin-right: 25px;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 89%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 78% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 1350px) and (max-width: 1600px)
{
	.comment-body, .comment-body-mentioned, .comment-body-me
	{
		margin-right: 25px;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 91%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 80% "Open Sans", sans-serif;
	}
}

@media only screen and (min-width: 1600px)
{
	.comment-body, .comment-body-mentioned, .comment-body-me
	{
		margin-right: 25px;
	}
	.comment-content-wrapper
	{
		float: right;
		width: 93%;
	}
	.comment-profile-wrapper
	{
		text-align: center;
		width: 105px;
	}
	.normal, body
	{
		font: normal 85% "Open Sans", sans-serif;
	}
}

